# pepy-stats

./: .gitignore  README.md  pyproject.toml  script.py
.github/workflows/: bump-version.yml  main.yml  update-stats.yml
pepy_stats/: __init__.py  cli.py  core.py
stats/: aws-sso-util.json  boto3-client-cache.json  boto3-refresh-session.json  elhaz.json  laudanum.json  profile-this.json
